<resources>
    <string name="app_name">CS3040 Mobile App</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered?</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_failed">Failed to create user</string>
</resources>