<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="25dp"
        android:id="@+id/txtWelcome"/>

    <EditText
        android:id="@+id/edtTxtUsername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTxtUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:id="@+id/edtTxtPassword"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTxtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:id="@+id/btnLogin"/>

    <RelativeLayout
        android:id="@+id/layoutNotRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txtNotRegistered"
            android:text="@string/not_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_toRightOf="@id/txtNotRegistered"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_secondary"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutNotRegistered"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>


</RelativeLayout>